--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
                 <dependency>
                   <groupId>com.puppycrawl.tools</groupId>
                   <artifactId>checkstyle</artifactId>
-                  <version>7.5.1</version>
+                  <version>[8.18,)</version>
                 </dependency>
               </dependencies>
             </plugin>
